# rest_python

./: .env  .gitignore  README.md  auth.py  main.py  models.py  pyproject.toml
migrations/versions/: 60ab6581f2e6_add_user.py  63e95562daff_add_to_model_user_filed_confirmed.py  a6d82763d680_init.py
src/api/: auth.py  notes.py  tags.py  users.py
src/conf/: config.py
src/repository/: notes.py
src/services/: auth.py  notes.py
tests/: test_integration_auth.py  test_integration_tags.py
