[tool.poetry]
name = "rest-python"
version = "0.1.0"
description = ""
authors = ["Oleksii Dmytriiev <sysqwerty1984@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
fastapi = { extras = ["standard"], version = "^0.115.5"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
